apps/php/manifest/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-php
  labels:
    app: devops-php
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-php
  template:
    metadata:
      labels:
        app: devops-php
    spec:
      serviceAccountName: devops-php
      containers:
        - name: devops-php
          image: 493981950259.dkr.ecr.eu-north-1.amazonaws.com/ecr-php:latest
          imagePullPolicy: Always
          command: ["/bin/sh"]
          args: ["/entrypoint.sh"]
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
