apps/php/manifest/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-php
  labels:
    app: devops-php
spec:
  type: NodePort
  selector:
    app: devops-php
  ports:
    - name: http
      port: 80
      targetPort: 80
